--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
 
 <body class="font-['helvetica_now_display']">
     <nav class="w-full flex justify-between left-0 px-5 py-3">
-        <h3 class="text-xl">Scatch</h3>
+        <h3 class="text-xl">BagShop</h3>
         <% var loggedin = typeof loggedin !== "undefined" ? loggedin : true%>
         <!--this means if the loggedin value sent is undefined then set the variable "loggedin" value as true else let the variable has the value of the loggedin sent-->
         <% if (loggedin) { %>
