--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,32 +1,54 @@
-<%- include('./partials/header') %>
-    <div class="w-full h-screen flex items-start px-20 py-20">
-        <div class="w-[25%] flex h-screen flex-col items-start">
-            <div class="flex flex-col">
-                <a class="block w-fit mb-2" href="">All Products</a>
-                <a class="block w-fit mb-2" href="/owners/admin">Create new product</a>
-            </div>
-        </div>
-        <div class="w-[75%] flex flex-col gap-5 h-screen">
-            <a class="text-red-500" href="">Delete all</a>
-            <div class="flex items-start gap-5">
-                <% owner.products.forEach( (product) => { %>
-                    <div class="w-60 bg-red-500">
-                        <div class="w-full h-52 flex items-center justify-center bg-[<%= product.bgcolor %>]">
-                            <img class="h-[12rem]" src="data:image/jpeg;base64, <%=product.image.toString('base64')%>" alt="">
-                        </div>
-                        <div class="flex justify-between bg-[<%= product.panelcolor %>] items-center px-4 py-4 text-[<%= product.textcolor %>]">
-                            <div>
-                                <h3><%=product.name%></h3>
-                                <h4>₹ <%=product.price %></h4>
-                                <h4><%=product.quantity %> units</h4>
-                            </div>
-                            <a class="w-7 h-7 flex items-center justify-center rounded-full bg-white" href="">
-                                <i class="ri-add-line"></i>
-                            </a>
-                        </div>
-                    </div>
-                <% }) %> 
-            </div>
-        </div>
+<%- include('./partials/header') %> <% if(success.length>0) { %>
+<div
+  class="absolute top-5 left-1/2 -translate-x-1/2 -translate-y-1/2 p-3 rounded-md bg-blue-500"
+>
+  <span class="inline-block mt-1 mb-1 text-white"> <%=success%> </span>
+</div>
+<% } %>
+<div class="w-full h-screen flex items-start px-20 py-10">
+  <div class="w-[25%] flex h-screen flex-col items-start border-r border-gray-200 pt-10">
+    <div class="flex flex-col">
+      <a class="block w-fit mb-2" href="">All Products</a>
+      <a class="block w-fit mb-2" href="/owners/admin">Create new product</a>
     </div>
-    <%- include('./partials/footer') %>
+  </div>
+  <div class="w-[75%] pt-10 pl-10 flex flex-col gap-5 h-screen">
+    <a class="text-red-500" href="/products/deleteAll">Delete all</a>
+    <div class="flex items-start gap-5">
+      <% owner.products.forEach( (product) => { %>
+      <div class="w-60 bg-red-500">
+        <div
+          class="w-full h-52 flex items-center justify-center bg-[<%= product.bgcolor %>]"
+        >
+          <img
+            class="h-[12rem]"
+            src="data:image/jpeg;base64, <%=product.image.toString('base64')%>"
+            alt=""
+          />
+        </div>
+        <div
+          class="flex gap-2 justify-between bg-[<%= product.panelcolor %>] items-center px-4 py-4 text-[<%= product.textcolor %>]"
+        >
+          <div class="w-1/2">
+            <h3><%=product.name%></h3>
+            <h4>₹ <%=product.price %></h4>
+            <h4><%=product.quantity %> units</h4>
+          </div>
+          <div
+            class="w-1/2 h-full flex flex-col gap-2 items-center justify-center"
+            href=""
+          >
+            <a class="bg-green-300 w-3/4 h-full px-2 rounded-lg text-black text-center" href="/owners/editProduct/<%=product._id%>">
+                Edit
+            </a>
+            <a class="bg-red-300 w-3/4 px-2 rounded-lg text-center text-black" href="/products/delete/<%=product._id%>">
+                Delete
+            </a>
+          </div>
+        </div>
+      </div>
+      <% }) %>
+    </div>
+  </div>
+</div>
+<%- include('./partials/footer') %>
