--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,8 @@
 </head>
 
 <body class="font-['helvetica_now_display']">
-    <nav class="w-full flex justify-between left-0 px-5 py-3">
-        <h3 class="text-xl">BagShop</h3>
+    <nav class="w-full flex justify-between px-6 pt-5 pb-5 border-b border-green-100 bg-green-100 shadow-md py-3">
+        <h3 class="text-xl text-green-500 font-semibold">BagShop</h3>
         <% var loggedin = typeof loggedin !== "undefined" ? loggedin : true%>
         <!--this means if the loggedin value sent is undefined then set the variable "loggedin" value as true else let the variable has the value of the loggedin sent-->
         <% if (loggedin) { %>
