--- a/views/editProduct.ejs
+++ b/views/editProduct.ejs
@@ -12,7 +12,7 @@
                     <div class="w-[25%] flex h-screen flex-col items-start">
                         <div class="flex flex-col">
                             <a class="block w-fit mb-2" href="/owners/product">All Products</a>
-                            <a class="block w-fit mb-2" href="">Create new product</a>
+                            <a class="block w-fit mb-2" href="/owners/admin">Create new product</a>
                         </div>
                     </div>
                     <main class="w-3/4 bg-white p-8 shadow ml-4">
@@ -68,7 +68,7 @@
                                  </label>
                                 </div>
                             </div>
-                            <input class="px-5 py-2 rounded mt-3 bg-blue-500 text-white" type="submit"
+                            <input class="px-5 py-2 rounded mt-3 bg-green-500 text-white cursor-pointer font-semibold" type="submit"
                                 value="Edit Product">
                         </form>
                     </main>
