--- a/views/createproducts.ejs
+++ b/views/createproducts.ejs
@@ -47,7 +47,7 @@
                                         class="border p-2 rounded w-full">
                                 </div>
                             </div>
-                            <input class="px-5 py-2 rounded mt-3 bg-blue-500 text-white" type="submit"
+                            <input class="px-5 py-2 rounded mt-3 bg-green-500 text-white cursor-pointer font-semibold" type="submit"
                                 value="Create New Product">
                         </form>
                     </main>
