--- a/views/owner-login.ejs
+++ b/views/owner-login.ejs
@@ -18,7 +18,7 @@
                         type="email" placeholder="Email" name="email">
                     <input class="block bg-zinc-100 w-full px-3 py-2 border-[1px] rounded-md mb-3 border-zinc-200"
                         type="password" placeholder="Password" name="password">
-                    <input class="px-5 rounded-full py-3 mt-2 bg-blue-500 text-white" type="submit" value="Login">
+                    <input class="px-5 rounded-full py-3 mt-2 bg-green-500 text-white cursor-pointer font-semibold" type="submit" value="Login">
                 </form>
             </div>
         </div>
