--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,71 +1,106 @@
-<%- include('./partials/header') %>
-    <% if(success.length>0) { %>
-        <div class="absolute top-5 left-1/2 -translate-x-1/2 -translate-y-1/2 p-3 rounded-md bg-blue-500">
-            <span class="inline-block mt-1 mb-1 text-white">
-                <%=success%>
-            </span> 
-        </div>   
-    <% } %>
-    <div class="w-full h-screen flex items-start py-20">
-        <div class="w-[25%] flex h-screen flex-col lg:w-[15%] px-10 max-lg:px-5 border-r pt-10 border-gray-300 items-start">
-            <div class="flex items-center gap-2">
-                <h3>Sort by</h3>
-                <form action="/shop/sort" method="post" id="form">
-                    <select class="border-[1px] px-2 py-1" name="sortby" onchange="SortBy()" id="">
-                        <option value="newest">Newest</option>
-                        <option value="popular">Popular</option>
-                    </select>
-                </form>
-            </div>
-            <div class="flex flex-col mt-20">
-                <a class="block w-fit mb-2" href="/shop/latest">New Collection</a>
-                <a class="block w-fit mb-2" href="/shop">All Products</a>
-                <a class="block w-fit mb-2" href="/shop/discount">Discounted Products</a>
-            </div>
-            <div class="mt-32">
-                <a class="block w-fit mb-2" href="">Filter by :</a>
-                <a class="block w-fit mb-2" href="/shop/available">Availability</a>
-                <a class="block w-fit mb-2" href="/shop/discount">Discount</a>
-                <form action="/shop/price" method="post" >
-                    Price Range:
-                    <div class="flex gap-3 py-2 ">
-                        <input class="w-1/3 text-center border border-black" placeholder="0" value="0" min="0" type="number" name="start">
-                        to
-                        <input class="w-1/3 border text-center border-black" placeholder="10000" value="1000" min="0" type="number" name="end">
-                        <input class="bg-green-500 text-white p-1 font-bold w-1/3 max-lg:text-sm cursor-pointer" type="submit" value="filter"/>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="w-[75%] flex pl-10 pt-10 flex-col gap-5 h-screen">
-            <div class="flex flex-wrap items-start gap-5">
-                <% products.forEach(function(product){ %>
-                    <div class="w-60">
-                        <div class="w-full h-52 flex items-center justify-center bg-[<%=product.bgcolor%>]">
-                            <img class="h-[12rem]" src="data:image/jpeg;base64,<%= product.image.toString('base64') %>"
-                                alt="">
-                        </div>
-                        <div
-                            class="flex justify-between bg-[<%= product.panelcolor %>] items-center px-4 py-4 text-[<%= product.textcolor %>]">
-                            <div>
-                                <h3>
-                                    <%= product.name %>
-                                </h3>
-                                <h4>₹ <%= product.price %>
-                                </h4>
-                            </div>
-                            <a class="w-7 h-7 flex items-center justify-center rounded-full bg-white" href="/addtocart/<%=product._id%>">
-                                <i class="ri-add-line text-black font-bold"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <% }) %>
-            </div>
-        </div>
+<%- include('./partials/header') %> <% if(success.length>0) { %>
+<div
+  class="absolute top-5 left-1/2 -translate-x-1/2 -translate-y-1/2 p-3 rounded-md bg-blue-500"
+>
+  <span class="inline-block mt-1 mb-1 text-white"> <%=success%> </span>
+</div>
+<% } %>
+<div class="w-full h-screen flex items-start py-20">
+  <div
+    class="w-[25%] flex h-screen flex-col lg:w-[15%] px-10 max-lg:px-5 border-r pt-10 border-gray-300 items-start"
+  >
+    <div class="flex items-center gap-2">
+      <h3>Sort by</h3>
+      <form action="/shop/sort" method="post" id="form">
+        <select
+          class="border-[1px] px-2 py-1"
+          name="sortby"
+          onchange="SortBy()"
+          id=""
+        >
+          <% if(sort=="default") { %>
+          <option value="default">Default</option>
+          <option value="newest">Newest</option>
+          <%} else if(sort == "newest"){%>
+            <option value="newest">Newest</option>
+            <option value="default">Default</option>
+          <%}%>
+        </select>
+      </form>
     </div>
-    <script>
-        const SortBy = () => {
-            document.getElementById("form").submit();
-        }
-    </script>
-    <%- include('./partials/footer') %>
+    <div class="flex flex-col mt-20">
+      <a class="block w-fit mb-2" href="/shop/latest">New Collection</a>
+      <a class="block w-fit mb-2" href="/shop">All Products</a>
+      <a class="block w-fit mb-2" href="/shop/discount">Discounted Products</a>
+    </div>
+    <div class="mt-32">
+      <a class="block w-fit mb-2 font-semibold" href="">Filter by :</a>
+      <a class="block w-fit mb-2" href="/shop/available">Availability</a>
+      <a class="block w-fit mb-2" href="/shop/discount">Discount</a>
+      <form action="/shop/price" method="post">
+        Price Range:
+        <div class="flex gap-3 py-2">
+          <input
+            class="w-1/3 text-center border border-black"
+            placeholder="0"
+            value="0"
+            min="0"
+            type="number"
+            name="start"
+          />
+          to
+          <input
+            class="w-1/3 border text-center border-black"
+            placeholder="10000"
+            value="1000"
+            min="0"
+            type="number"
+            name="end"
+          />
+          <input
+            class="bg-green-500 text-white p-1 font-bold w-1/3 max-lg:text-sm cursor-pointer"
+            type="submit"
+            value="filter"
+          />
+        </div>
+      </form>
+    </div>
+  </div>
+  <div class="w-[75%] flex pl-10 pt-10 flex-col gap-5 h-screen">
+    <div class="flex flex-wrap items-start gap-5">
+      <% products.forEach(function(product){ %>
+      <div class="w-60">
+        <div
+          class="w-full h-52 flex items-center justify-center bg-[<%=product.bgcolor%>]"
+        >
+          <img
+            class="h-[12rem]"
+            src="data:image/jpeg;base64,<%= product.image.toString('base64') %>"
+            alt=""
+          />
+        </div>
+        <div
+          class="flex justify-between bg-[<%= product.panelcolor %>] items-center px-4 py-4 text-[<%= product.textcolor %>]"
+        >
+          <div>
+            <h3><%= product.name %></h3>
+            <h4>₹ <%= product.price %></h4>
+          </div>
+          <a
+            class="w-7 h-7 flex items-center justify-center rounded-full bg-white"
+            href="/addtocart/<%=product._id%>"
+          >
+            <i class="ri-add-line text-black font-bold"></i>
+          </a>
+        </div>
+      </div>
+      <% }) %>
+    </div>
+  </div>
+</div>
+<script>
+  const SortBy = () => {
+    document.getElementById("form").submit();
+  };
+</script>
+<%- include('./partials/footer') %>
