--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,12 +19,13 @@
 ><a href="/owners/product">Admin</a>
 </div>
 <div
-  class=" container my-auto h-screen mx-auto flex-col items-center"
+  class="container my-auto h-screen mx-auto flex-col items-center"
 >
-  <div class="w-full h-1/4 mt-10 flex justify-center max-lg:items-end lg:items-center pb-10">
-    <h3 class="text-4xl">
+  <div class="w-full h-1/4 mt-10 flex flex-col max-lg:justify-end items-center lg:justify-center pb-10">
+    <h3 class="lg:text-6xl text-5xl">
       Welcome to <span class="text-green-300 font-bold">Bagsy</span>
     </h3>
+    <p class="font-semibold pt-3 text-lg text-green-600">Your personalized online bag store</p>
   </div>
   <div class="flex h-2/4 w-full pt-2 container">
     <div class="w-1/2 flex border-r border-gray-300 justify-center">
