--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,4 +1,10 @@
-<%- include('./partials/header') %> <% if( user.cart.length == 0) { %>
+<%- include('./partials/header') %> <% if(success.length>0) { %>
+<div
+  class="absolute top-5 left-1/2 -translate-x-1/2 -translate-y-1/2 p-3 rounded-md bg-blue-500"
+>
+  <span class="inline-block mt-1 mb-1 text-white"> <%=success%> </span>
+</div>
+<% } %> <% if( user.cart.length == 0) { %>
 <p
   class="text-6xl text-gray-300 font-bold h-screen flex items-center justify-center"
 >
@@ -6,43 +12,43 @@
 </p>
 <% } else { %>
 <div class="py-10 flex flex-col gap-3 h-full">
-  <% user.cart.forEach( function(product){ %>
-  <div class="w-full h-1/2 flex items-start px-20 py-10 border-b border-gray-200 gap-10">
+  <% user.cart.forEach( function({productId, quantity}){ %>
+  <div
+    class="w-full h-1/2 flex items-start px-20 py-10 border-b border-gray-200 gap-10"
+  >
     <div class="w-[30%] rounded-md overflow-hidden">
       <div
-        class="w-full flex justify-center items-center h-80 bg-[<%=product.bgcolor%>]"
+        class="w-full flex justify-center items-center h-80 bg-[<%=productId.bgcolor%>]"
       >
         <img
           class="h-[18rem]"
-          src="data:image/jpeg;base64,<%=product.image.toString('base64')%>"
+          src="data:image/jpeg;base64,<%=productId.image.toString('base64')%>"
           alt=""
         />
       </div>
       <div
-        class="w-full flex justify-between px-5 py-4 bg-[<%=product.panelcolor%>]"
+        class="w-full flex justify-between px-5 py-4 bg-[<%=productId.panelcolor%>]"
       >
-        <h3 class="text-2xl"><%=product.name%></h3>
+        <h3 class="text-2xl"><%=productId.name%></h3>
         <div class="flex items-center gap-2">
-          <a href=""
+          <a href="/removefromcart/<%=productId._id%>"
             ><i
               class="w-7 h-7 bg-white flex rounded-full items-center justify-center ri-subtract-line text-black font-bold"
             ></i
           ></a>
           <div class="px-2 py-1 rounded-md bg-white text-black font-semibold">
-            01
+            <%=quantity%>
           </div>
-          <a href="/addtocart/<%=product._id%>"
+          <a href="/addtocart/<%=productId._id%>"
             ><i
               class="w-7 h-7 bg-white flex rounded-full items-center justify-center ri-add-line text-black font-bold"
             ></i
           ></a>
         </div>
       </div>
-      <div
-        class="flex items-center justify-between px-5 py-3 bg-green-100"
-      >
+      <div class="flex items-center justify-between px-5 py-3 bg-green-100">
         <h4 class="text-lg text-4xl text-black">Net Total</h4>
-        <h2 class="text-lg">₹ <%=product.price%></h2>
+        <h2 class="text-lg">₹ <%=productId.price*quantity%></h2>
       </div>
     </div>
     <div class="w-[70%]">
@@ -50,11 +56,11 @@
       <div class="px-10 mt-5">
         <div class="flex mt-2">
           <h4 class="w-1/3">Total MRP</h4>
-          <h4>₹ <%=product.price%></h4>
+          <h4>₹ <%=productId.price*quantity%></h4>
         </div>
         <div class="flex mt-2">
           <h4 class="w-1/3">Discount on MRP</h4>
-          <h4>₹ <%=product.discount%></h4>
+          <h4>₹ <%=productId.discount%></h4>
         </div>
         <div class="flex mt-2">
           <h4 class="w-1/3">Platform Fee</h4>
@@ -69,10 +75,9 @@
       <div class="flex mt-5">
         <h3 class="w-1/3 text-xl">Total Amount</h3>
         <h3 class="font-semibold text-xl text-green-600">
-          ₹ <%=product.price + 20 - product.discount%>
+          ₹ <%=productId.price*quantity + 20 - productId.discount%>
         </h3>
       </div>
-      <form action=""></form>
     </div>
   </div>
   <% }) %>
