--- a/views/editProduct.ejs
+++ b/views/editProduct.ejs
@@ -28,22 +28,22 @@
                                  <label for="">
                                     Name:
                                     <input name="name" type="text" placeholder="Product Name" value="<%=product.name%>"
-                                        class="border p-2 rounded w-full">
+                                        class="border p-2 rounded w-full" required>
                                  </label>
                                  <label for="">
                                     Price:
                                     <input name="price" type="text" placeholder="Product Price" value="<%=product.price%>"
-                                        class="border p-2 rounded w-full">
+                                        class="border p-2 rounded w-full" required>
                                  </label>
                                  <label for="">
                                     Discount:
                                     <input name="discount" type="text" placeholder="Discount Price"
-                                        class="border p-2 rounded w-full" value="<%=product.discount%>" >
+                                        class="border p-2 rounded w-full" value="<%=product.discount%>">
                                  </label>
                                  <label for="">
                                     Quantity:
                                     <input name="quantity" type="number" placeholder="Quantity"
-                                        class="border p-2 rounded w-full" value="<%=product.quantity%>">
+                                        class="border p-2 rounded w-full" value="<%=product.quantity%>" required>
                                  </label>
                                 </div>
                             </div>
@@ -54,17 +54,17 @@
                                  <label for="">
                                     Background Color:
                                     <input name="bgcolor" type="text" placeholder="Background Color" value="<%=product.bgcolor%>"
-                                        class="border p-2 rounded w-full">
+                                        class="border p-2 rounded w-full" required>
                                  </label>
                                  <label for="">
                                     Panel Color:
                                     <input name="panelcolor" type="text" placeholder="Panel Color" value="<%=product.panelcolor%>"
-                                        class="border p-2 rounded w-full">
+                                        class="border p-2 rounded w-full" required>
                                  </label>
                                  <label for="">
                                     Text Color:
                                     <input name="textcolor" type="text" placeholder="Text Color" value="<%=product.textcolor%>"
-                                        class="border p-2 rounded w-full">
+                                        class="border p-2 rounded w-full" required>
                                  </label>
                                 </div>
                             </div>
