--- a/views/createproducts.ejs
+++ b/views/createproducts.ejs
@@ -40,11 +40,11 @@
                                 <h3 class="text-lg font-semibold mb-2">Panel Details</h3>
                                 <div class="grid grid-cols-2 gap-4">
                                     <input name="bgcolor" type="text" placeholder="Background Color"
-                                        class="border p-2 rounded w-full">
+                                        class="border p-2 rounded w-full" required>
                                     <input name="panelcolor" type="text" placeholder="Panel Color"
-                                        class="border p-2 rounded w-full">
+                                        class="border p-2 rounded w-full" required>
                                     <input name="textcolor" type="text" placeholder="Text Color"
-                                        class="border p-2 rounded w-full">
+                                        class="border p-2 rounded w-full" required>
                                 </div>
                             </div>
                             <input class="px-5 py-2 rounded mt-3 bg-green-500 text-white cursor-pointer font-semibold" type="submit"
